--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,18 @@
-:root{
-  --blue: #1D9BF0;
+:root {
+  --blue: #1d9bf0;
+  --text:white;
+
+
 }
 
-body{
+body {
   background-color: black;
   padding-inline: 30rem;
-  color: white;
+  color: var(--text);
+  font-family: Arial, Helvetica, sans-serif;
 }
-.bdy{
+.bdy {
   display: flex;
   justify-content: space-between;
-}
-/* .home{
-  width: 50%;
-} */
-.btn{
-  border-style: none;
-  padding: .5rem;
-  border-radius: 2.5rem;
-  width: 6rem;
-  cursor: pointer;
 }
 
-.react-btn{
-  display: flex;
-  justify-content: space-between;
-  padding-left: 5rem;
-  width: 80%;
-}
-.pub{
-  display: flex;
-  align-items: center;
-}
-.profile-pub{
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  padding-right: 1rem;
-}
-.pub-content{
-  padding-left: 5rem;
-}
-.img-pub{
-  height: 25rem;
-  width : 48rem;
-}
