--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,39 +1,40 @@
 :root {
   --blue: #1d9bf0;
 }
-.home{
-    border: 0.5px solid  rgba(190, 186, 186, 0.511);
+.home {
+  border: 0.5px solid rgba(190, 186, 186, 0.511);
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
-  border: .5px solid rgba(190, 186, 186, 0.511);
+  border: 0.5px solid rgba(190, 186, 186, 0.511);
   padding-inline: 2rem;
 }
 .Home-avatar {
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  padding-right: 1rem;
+  border-radius: 100%;
+  width: 65px;
+  height: 65px;
 }
 .main {
   display: flex;
-  /* border:.5px solid rgba(190, 186, 186, 0.511);  */
-  padding: .5rem 2rem 0 2rem;
+  padding: 0.5rem 2rem 0 2rem;
   justify-content: space-between;
 }
-.main-intro{
-    display: flex;
-    padding-bottom: 1rem;
+.main-intro {
+  display: flex;
+  padding-bottom: 1rem;
+}
+.intro-msg {
+  padding-left: 1rem;
 }
 .main-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2rem 1rem 3.5rem;
+  padding: 0 2rem 1rem 4.5rem;
 }
-.main-icons{
+.main-icons {
   display: flex;
   justify-content: space-between;
   width: 25%;
@@ -43,7 +44,7 @@
   background-color: var(--blue);
   color: White;
   border-style: none;
-  padding: .8rem;
+  padding: 0.8rem;
   border-radius: 2.5rem;
   width: 6rem;
   cursor: pointer;
