--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -1,5 +1,5 @@
 .Tweet {
-  border: 0.5px solid rgba(190, 186, 186, 0.511);
+  border: 0.5px solid rgba(190, 186, 186, 0.237);
   padding-inline: 2rem;
   padding-top: 1rem;
   margin: 0;
@@ -13,6 +13,9 @@
   padding-left: 5rem;
   width: 80%;
   align-items: center;
+}
+.react{
+  padding-left:.5rem ;
 }
 .pub {
   display: flex;
@@ -28,8 +31,11 @@
   padding-left: 4rem;
 }
 .img-pub {
-  max-width: 40rem;
-  border: 2px solid rgba(255, 255, 255, 0.748);
+  min-width: 18rem;
+  max-width: 32rem;
+  min-height:14rem ;
+  max-height: 28rem;
+ 
   border-radius: 25px;
 }
 .reaction {
