--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,14 +1,16 @@
+
 :root {
   --blue: #1d9bf0;
 }
 .home {
-  border: 0.5px solid rgba(190, 186, 186, 0.511);
+  margin-top: 0;
+  border: 0.5px solid rgba(190, 186, 186, 0.237);
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
-  border: 0.5px solid rgba(190, 186, 186, 0.511);
+  border: 0.5px solid rgba(190, 186, 186, 0.237);
   padding-inline: 2rem;
 }
 .Home-avatar {
@@ -24,15 +26,26 @@
 .main-intro {
   display: flex;
   padding-bottom: 1rem;
+  align-items: center;
+}
+::placeholder{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
 .intro-msg {
   padding-left: 1rem;
+  padding-top: 1rem;
+  background-color: inherit;
+  border: none;
+ outline: none;
+ color: white;
+ font-size: 18px;
 }
 .main-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2rem 1rem 4.5rem;
+  padding: 0 2rem 1rem 7rem;
 }
 .main-icons {
   display: flex;
