--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -1,3 +1,7 @@
+:root {
+  --blue: #1d9bf0;
+  --text:white;
+}
 .Tweet {
   border: 0.5px solid rgba(190, 186, 186, 0.237);
   padding-inline: 2rem;
@@ -13,6 +17,7 @@
 }
 .react{
   padding-left:.5rem ;
+  cursor: pointer;
 }
 .pub {
   display: flex;
@@ -39,6 +44,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
+  transition:.2s;
 }
 .User-name {
   font-weight: bold;
@@ -55,5 +62,34 @@
 .text{
   padding: 0 0 1rem 0.5rem;
   margin: 0;
+}
+/* svg{
+  border: none;
+  border-radius: 100%;
+  transition: .2s;
+  padding: 0.4rem;
+} */
+/* svg:hover{
+  cursor: pointer;
+  fill: var(--blue); 
+  background-color: #1d9cf021 ;
+} */
+
+
+.reaction:hover{
+fill: aquamarine;
+color: var(--blue);
+}
+.replies{
+  border: none;
+  border-radius: 100%;
+  transition: .2s;
+  padding: 0.4rem;
+}
+.replies:hover{
+  cursor: pointer;
+  fill: var(--blue); 
+  background-color: #1d9cf023 ;
+  /* box-shadow: 0 0 .1rem var(--blue); */
 }
 
