--- a/src/components/sidebar-left.css
+++ b/src/components/sidebar-left.css
@@ -3,22 +3,43 @@
   --blue: #1d9bf0;
   --text: #ffffff;
 }
+.bird {
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.bird:hover {
+  fill: var(--blue);
+}
+
 .side-element {
   display: flex;
   align-items: center;
+  margin-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.side-element:hover {
+  background-color: rgba(54, 54, 54, 0.608);
+  border-radius: 54rem;
+  max-width: auto;
 }
 .side-title {
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 .side-btn {
   background-color: var(--blue);
   color: var(--text);
   border-style: none;
-  padding: 0.8rem;
-  border-radius: 2.5rem;
+  padding: 1rem;
+  border-radius: 54rem;
   width: 12rem;
+  height: 3.5rem;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   transition: 0.5s;
 }
@@ -26,11 +47,9 @@
   background-color: var(--blue-hover);
   color: var(--text);
   border-style: none;
-  padding: 0.8rem;
-  border-radius: 2.5rem;
-  width: 12rem;
+  padding: 1rem;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
 }
 .side-avatar {
@@ -42,13 +61,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 18rem;
+  padding-top: 14rem;
 }
-.bottom-slide-content{
-    display: flex;
-    align-items: center;   
-    width: 70%;
+
+.bottom-slide-content {
+  display: flex;
+  align-items: center;
+  width: 70%;
 }
-.name{
-    padding-left: 1rem;
+.name {
+  padding-left: 1rem;
 }
