--- a/src/components/home.css
+++ b/src/components/home.css
@@ -13,6 +13,7 @@
   justify-content: space-between;
   border: 0.5px solid rgba(190, 186, 186, 0.237);
   padding-inline: 2rem;
+  /* position: fixed; */
 }
 .Home-avatar {
   border-radius: 100%;
