--- a/src/components/sidbarRight.css
+++ b/src/components/sidbarRight.css
@@ -55,6 +55,7 @@ padding-left: 2rem;
     border: none;
     background-color: transparent;
     padding-left: 1.2rem;
+    padding-block: 1rem;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
