--- a/src/components/home.css
+++ b/src/components/home.css
@@ -13,7 +13,8 @@
   justify-content: space-between;
   border: 0.5px solid rgba(190, 186, 186, 0.237);
   padding-inline: 2rem;
-  /* position: fixed; */
+  /* position: fixed;
+  width: 37rem; */
 }
 .Home-avatar {
   border-radius: 100%;
@@ -78,3 +79,4 @@
   font-size: 15px;
   font-weight: 600;
 }
+
