--- a/src/components/profil.css
+++ b/src/components/profil.css
@@ -73,8 +73,8 @@
   display: flex;
   justify-content: space-around;
 }
-.menu_content{
+/* .menu_content{
   border: 0.5px solid rgba(190, 186, 186, 0.237);
   padding-inline: 1.5rem;
-}
+} */
 
