--- a/src/components/home.css
+++ b/src/components/home.css
@@ -82,4 +82,69 @@
   font-size: 15px;
   font-weight: 600;
 }
+/* 
+    *************************************ICONE BTN************************************************ */
+
+.filebutton {
+  width:40px;
+  height:40px;
+  overflow:hidden;
+  position:relative;
+  background-image:url(src/assets/Icons/Media.svg);
+  background-repeat: no-repeat;
+
+}
+
+.giftbutton {
+  width:40px;
+  height:40px;
+  overflow:hidden;
+  position:relative;
+  background-image:url(src/assets/Icons/Gif.svg);
+  background-repeat: no-repeat;
+
+}
+
+.pollbutton{
+  width:40px;
+  height:40px;
+  overflow:hidden;
+  position:relative;
+  background-image:url(src/assets/Icons/Poll.svg);
+  background-repeat: no-repeat;
+}
+
+.emojibutton{
+  width:40px;
+  height:40px;
+  overflow:hidden;
+  position:relative;
+  background-image:url(src/assets/Icons/Emoji.svg);
+  background-repeat: no-repeat;
+}
+
+.schedulebutton{
+  width:40px;
+  height:40px;
+  overflow:hidden;
+  position:relative;
+  background-image:url(src/assets/Icons/Schedule.svg);
+  background-repeat: no-repeat;
+}
+
+.btn-input {
+  z-index: 999;
+  line-height: 0;
+  font-size: 40px;
+  position: absolute;
+  top: -2px;
+  left: -700px;
+  opacity: 0;
+  filter: alpha(opacity = 0);
+  -ms-filter: "alpha(opacity=0)";
+  cursor: pointer;
+  _cursor: hand;
+  margin: 0;
+  padding:0;
+}
 
