--- a/src/components/sidebar-left.css
+++ b/src/components/sidebar-left.css
@@ -27,10 +27,18 @@
   border-radius: 54rem;
   max-width: auto;
 }
+.side-element::after {
+  background-color: rgba(54, 54, 54, 0.608);
+  border-radius: 54rem;
+  max-width: auto;
+  font-weight: 600;
+}
+
 .side-title {
   padding-left: 1rem;
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
+  font-weight: 100;
 }
 .side-btn {
   background-color: var(--blue);
